Add stupid info activity to comply with idiotic GooglePlay rules.

--- a/TV-BrowserSimpleMarkerPlugin/AndroidManifest.xml
+++ b/TV-BrowserSimpleMarkerPlugin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.tvbrowser.tvbrowsersimplemarkerplugin"
-    android:versionCode="8"
+    android:versionCode="9"
     android:versionName="@string/version" >
 
     <uses-sdk
@@ -12,6 +12,16 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity
+            android:name=".Info"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.TvBrowser.Translucent"
+            android:launchMode="singleTop" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <service
             android:name=".SimpleMarkerPlugin"
             android:label="3"
